// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test questionnaire results renders correctly 1`] = `
<div
  className="css-0"
>
  <h3
    className="chakra-heading css-1pomevn"
  >
    <span
      style={
        Object {
          "fontWeight": "500",
        }
      }
    >
      Questionnaire:
    </span>
     
    test questionnaire
  </h3>
  <hr
    aria-orientation="horizontal"
    className="chakra-divider css-m6jico"
  />
  <div
    className="css-1dm3oea"
  >
    <div
      className="css-tozizp"
    >
      <p
        className="chakra-text css-1vk2i6v"
      >
        how Happy are you
      </p>
      <hr
        aria-orientation="horizontal"
        className="chakra-divider css-gxls9t"
      />
      <div
        className="css-enqbrg"
      >
        <p
          className="chakra-text css-1h6rx2k"
        >
          not good
        </p>
        <p
          className="chakra-text css-1fadmyj"
        >
          very good
        </p>
      </div>
      <div
        className="css-azfv5b"
      >
        <p
          className="chakra-text css-12jt2tl"
        >
          Before
        </p>
        <p
          className="chakra-text css-10ircq3"
        >
          1
        </p>
        <div
          className="css-dcm4eu"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onPointerDown={[Function]}
          onPointerEnter={[Function]}
        >
          <div
            aria-valuemax={4}
            aria-valuemin={0}
            aria-valuenow={5}
            className="css-1jy0d03"
            role="progressbar"
            style={
              Object {
                "width": "125%",
              }
            }
          />
        </div>
        <p
          className="chakra-text css-10ircq3"
        >
          5
        </p>
      </div>
      <div
        className="css-azfv5b"
      >
        <p
          className="chakra-text css-12jt2tl"
        >
          After
        </p>
        <p
          className="chakra-text css-10ircq3"
        >
          1
        </p>
        <div
          className="css-dcm4eu"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onPointerDown={[Function]}
          onPointerEnter={[Function]}
        >
          <div
            aria-valuemax={4}
            aria-valuemin={0}
            aria-valuenow={1}
            className="css-1jy0d03"
            role="progressbar"
            style={
              Object {
                "width": "25%",
              }
            }
          />
        </div>
        <p
          className="chakra-text css-10ircq3"
        >
          5
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Test questionnaire results renders correctly no answers 1`] = `
<p
  className="chakra-text css-12b8tya"
>
  No answers for the assigned questionnaire
</p>
`;

exports[`Test questionnaire results renders correctly no questionnaire 1`] = `
<p
  className="chakra-text css-12b8tya"
>
  No questionnaire assigned
</p>
`;
